--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,7 +16,7 @@
     backupStaticProperties="false"
 >
     <testsuites>
-        <testsuite name="VendorName Test Suite">
+        <testsuite name="AwaisJameel Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
